// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenreItem rendering GenreItem renders correctly 1`] = `
<li
  className="catalog__genres-item "
  onClick={[Function]}
>
  <a
    className="catalog__genres-link"
    href="#"
  >
    Comedy
  </a>
</li>
`;

exports[`GenreItem rendering GenreItem renders correctly like clicked element 1`] = `
<li
  className="catalog__genres-item catalog__genres-item--active"
  onClick={[Function]}
>
  <a
    className="catalog__genres-link"
    href="#"
  >
    Comedy
  </a>
</li>
`;
